--- a/index.html
+++ b/index.html
@@ -14,22 +14,32 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <!-- Adding basic custom styles here -->
+    <!-- Custom Styles -->
     <style>
         body {
             background-color: #0a0c10;
             color: #fff;
             font-family: Poppins, sans-serif;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
 
-        h1, h3 {
-            text-align: center;
+        h1 {
+            font-size: 3rem;
             color: #fff;
+            margin-bottom: 20px;
         }
 
         .content-wrapper {
             text-align: center;
             padding: 20px;
+            background-color: #12141a;
+            border-radius: 10px;
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.5);
         }
 
         .key-box {
@@ -51,6 +61,7 @@
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            margin-top: 10px;
         }
 
         button:hover {
@@ -58,7 +69,7 @@
         }
 
         #dark-mode-toggle {
-            position: absolute;
+            position: fixed;
             top: 20px;
             right: 20px;
             background: transparent;
@@ -66,9 +77,10 @@
             color: #fff;
             font-size: 24px;
             cursor: pointer;
+            z-index: 10;
         }
 
-        /* Ensure the particles are visible */
+        /* Ensure particles don't overlap the content */
         #tsparticles {
             position: absolute;
             top: 0;
@@ -79,3 +91,137 @@
         }
     </style>
 </head>
+<body class="dark-mode"> <!-- Dark mode by default -->
+
+    <!-- Particles container -->
+    <div id="tsparticles"></div>
+
+    <h1>Avera.Solutions</h1>
+
+    <div class="content-wrapper">
+        <!-- Box around the Key text, which can be clicked to copy -->
+        <h3>
+            Key: <span id="key-box" class="key-box" onclick="copyKey()">avera.solutions</span>
+        </h3>
+
+        <a href="./files/avera-solutions.exe" target="_blank">
+            <button>Install Loader</button>
+        </a>
+    </div>
+
+    <!-- Dark Mode / Light Mode Toggle -->
+    <button id="dark-mode-toggle" onclick="toggleDarkMode()">
+        <i id="mode-icon" class="fas fa-moon"></i> <!-- Moon icon for dark mode -->
+    </button>
+
+    <script>
+        // Initialize tsParticles
+        tsParticles.load("tsparticles", {
+            particles: {
+                number: {
+                    value: 100,
+                    density: {
+                        enable: true,
+                        value_area: 800
+                    }
+                },
+                shape: {
+                    type: "circle"
+                },
+                color: {
+                    value: "#7800d2"  // Main color of particles
+                },
+                opacity: {
+                    value: 0.5,
+                    random: true,
+                    animation: {
+                        enable: true,
+                        speed: 1,
+                        minimumValue: 0.1
+                    }
+                },
+                size: {
+                    value: 3,
+                    random: true,
+                    animation: {
+                        enable: true,
+                        speed: 5,
+                        minimumValue: 1
+                    }
+                },
+                move: {
+                    enable: true,
+                    speed: 3,
+                    direction: "none",
+                    random: false,
+                    straight: false,
+                    outMode: "out",
+                    bounce: false
+                }
+            },
+            interactivity: {
+                detectsOn: "canvas",
+                events: {
+                    onhover: {
+                        enable: true,
+                        mode: "repulse"
+                    },
+                    onclick: {
+                        enable: true,
+                        mode: "push"
+                    }
+                }
+            }
+        });
+
+        // Function to copy the key text to the clipboard
+        function copyKey() {
+            const keyText = document.getElementById('key-box').textContent;
+            navigator.clipboard.writeText(keyText).then(function() {
+                // Notify the user that the text was copied
+                showNotification("Key copied to clipboard!");
+                
+                // Shrink the key box after copying
+                const keyBox = document.getElementById('key-box');
+                keyBox.style.transform = "scale(0.9)";
+                
+                // Reset the size of the key box after a short delay
+                setTimeout(() => {
+                    keyBox.style.transform = "scale(1)";
+                }, 300);
+            }).catch(function(err) {
+                console.error('Error copying text: ', err);
+            });
+        }
+
+        // Show a notification
+        function showNotification(message) {
+            const notification = document.createElement('div');
+            notification.classList.add('notification');
+            notification.textContent = message;
+            document.body.appendChild(notification);
+
+            // Remove the notification after 3 seconds
+            setTimeout(() => {
+                notification.remove();
+            }, 3000);
+        }
+
+        // Toggle between dark and light mode
+        function toggleDarkMode() {
+            const body = document.body;
+            const modeIcon = document.getElementById("mode-icon");
+
+            body.classList.toggle('dark-mode');
+
+            // Toggle between sun and moon icons
+            if (body.classList.contains('dark-mode')) {
+                modeIcon.classList.remove("fa-moon");
+                modeIcon.classList.add("fa-sun"); // Sun icon for light mode
+            } else {
+                modeIcon.classList.remove("fa-sun");
+                modeIcon.classList.add("fa-moon"); // Moon icon for dark mode
+            }
+        }
+    </script>
+</body>
